@@ -1,16 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Digest-SHA/Attic/perl-Digest-SHA-5.46.ebuild,v 1.6 2010/01/07 20:07:49 tove Exp $
-
-DESCRIPTION="Perl extension for SHA-1/224/256/384/512"
-HOMEPAGE=""
-SRC_URI=""
-
-LICENSE=""
-SLOT="0"
-KEYWORDS="alpha ~amd64 ia64 ppc ppc64 sparc x86"
-
-IUSE=""
-DEPEND=""
-
-RDEPEND="~perl-core/Digest-SHA-${PV}"
