@@ -1,14 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Encode/Attic/perl-Encode-2.38.ebuild,v 1.3 2010/01/07 21:11:54 tove Exp $
-
-DESCRIPTION="Virtual for Encode"
-HOMEPAGE=""
-SRC_URI=""
-
-LICENSE=""
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-RDEPEND="~perl-core/Encode-${PV}"
