@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Encode
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Encode/ChangeLog,v 1.9 2010/01/07 21:11:54 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Encode/ChangeLog,v 1.10 2010/01/17 13:11:39 tove Exp $
+
+  17 Jan 2010; Torsten Veller <tove@gentoo.org> -perl-Encode-2.37.ebuild,
+  -perl-Encode-2.38.ebuild:
+  Cleanup
 
   07 Jan 2010; Torsten Veller <tove@gentoo.org> perl-Encode-2.37.ebuild,
   perl-Encode-2.38.ebuild, perl-Encode-2.39.ebuild:
