@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Digest-SHA
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Digest-SHA/ChangeLog,v 1.15 2010/01/10 16:13:06 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Digest-SHA/ChangeLog,v 1.16 2010/01/17 13:09:37 tove Exp $
+
+  17 Jan 2010; Torsten Veller <tove@gentoo.org>
+  -perl-Digest-SHA-5.45.ebuild, -perl-Digest-SHA-5.46.ebuild:
+  Cleanup
 
   10 Jan 2010; Markus Meier <maekke@gentoo.org> perl-Digest-SHA-5.48.ebuild:
   add ~arm, bug #300221
